k8s/ptsdetect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptsdetect-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ptsdetect.me
      secretName: ptsdetect-tls-secret
  rules:
    - host: ptsdetect.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ptsdetect-api-service
                port:
                  number: 5000
